make deploy to lambda action workflow
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -1,6 +1,5 @@
 name: Build binary
-      run: | 
-      cd deploy/aws && zip deployment.zip main.py
+      run: cd deploy/aws && zip deployment.zip main.py
 
 name: default deploy
         uses: appleboy/lambda-action@master
