make deploy to lambda action workflow
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -1,9 +1,9 @@
 name: default deploy
-        uses: appleboy/lambda-action@master
-        run: "cd ../../deploy/aws/ && zip main.zip main.py"
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-east-1
-          function_name: test_main
-          zip_file: main.zip
+  uses: appleboy/lambda-action@master
+  run: cd ../../deploy/aws/ && zip main.zip main.py
+  with:
+    aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY }}
+    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    aws_region: us-east-1
+    function_name: test_main
+    zip_file: main.zip
