make deploy to lambda action workflow
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -1,4 +1,4 @@
-name: default deploy
+- name: default deploy
   uses: appleboy/lambda-action@master
   run: cd ../../deploy/aws/ && zip main.zip main.py
   with:
