make deploy to lambda action workflow
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -7,7 +7,7 @@ jobs:
       steps:
         - name: Build binary
           run: |
-            cd deploy/aws && zip main.zip main.py
+            echo $PWD
         - name: default deploy
           uses: appleboy/lambda-action@master
           with:
