--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -7,7 +7,7 @@ jobs:
       steps:
         - name: Build binary
           run: |
-            echo $PWD
+            cd $PWD/deploy/aws && zip main.zip main.py
         - name: default deploy
           uses: appleboy/lambda-action@master
           with:
