--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -9,7 +9,7 @@ jobs:
           run: |
             ls
         - name: default deploy
-          uses: appleboy/lambda-action@master
+          uses: appleboy/lambda-action@main
           with:
             aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY }}
             aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
