--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -7,9 +7,9 @@ jobs:
       steps:
         - name: Build binary
           run: |
-            ls
+            cd $PWD/../deploy/aws && echo $PWD/../
         - name: default deploy
-          uses: appleboy/lambda-action@main
+          uses: appleboy/lambda-action@master
           with:
             aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY }}
             aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
