--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -7,7 +7,7 @@ jobs:
       steps:
         - name: Build binary
           run: |
-            cd $PWD/../deploy/aws && echo $PWD/../
+            cd /home/runner/work/aws-lambda-test/deploy/aws
         - name: default deploy
           uses: appleboy/lambda-action@master
           with:
