make deploy to lambda action workflow
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -10,7 +10,7 @@ jobs:
       steps:
         - name: Build binary
           run: |
-            cd /home/runner/work/aws-lambda-test/aws-lambda-test/deploy/aws && ls
+            echo $PWD
         - name: default deploy
           uses: appleboy/lambda-action@master
           with:
