--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -17,6 +17,6 @@ jobs:
           with:
             aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY }}
             aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws_region: us-east-2
-            function_name: test_main
+            aws_region: us-east-1
+            function_name: github-action-test
 
