update github deploy acrion
Signed-off-by: lucaslima18 <lucas.ala1999@gmail.com>

--- a/.github/workflows/deploy_aws.yaml
+++ b/.github/workflows/deploy_aws.yaml
@@ -7,6 +7,7 @@ jobs:
   deploy_zip:
       runs-on: ubuntu-latest
       steps:
+        - uses: actions/checkout@v2
         - uses: papeloto/action-zip@v1
           with: 
             files: deploy/aws/main.py
